src/parser/UsecaseReaderParser.java
// Generated from UsecaseReader.g4 by ANTLR 4.7.2
package parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class UsecaseReaderParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, Word=30, Number=31, 
		Punctuation=32, EOL=33, WS=34;
	public static final int
		RULE_usecaseList = 0, RULE_usecase = 1, RULE_ucName = 2, RULE_briefDesc = 3, 
		RULE_precondition = 4, RULE_actor = 5, RULE_actorType = 6, RULE_dependency = 7, 
		RULE_generalization = 8, RULE_flow = 9, RULE_flowType = 10, RULE_rfs = 11, 
		RULE_steps = 12, RULE_step = 13, RULE_sentence = 14, RULE_specialKeyword = 15, 
		RULE_conditionalLogic = 16, RULE_postCondition = 17, RULE_statement = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"usecaseList", "usecase", "ucName", "briefDesc", "precondition", "actor", 
			"actorType", "dependency", "generalization", "flow", "flowType", "rfs", 
			"steps", "step", "sentence", "specialKeyword", "conditionalLogic", "postCondition", 
			"statement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Use Case Name '", "'Brief Description '", "'Precondition '", 
			"'Actor'", "'Actors'", "'Primary'", "'Secondary'", "'Dependency '", "'Generalization '", 
			"'Flow'", "'Flows'", "'Basic'", "'Bounded Alternative'", "'Global Alternative'", 
			"'Specific Alternative'", "'RFS '", "'-'", "'INCLUDE USE CASE'", "'EXTENDED BY USE CASE'", 
			"'MEANWHILE'", "'VALIDATES THAT'", "'ELSE'", "'ENDIF'", "'DO'", "'UNTIL'", 
			"'IF'", "'ELSEIF'", "'THEN'", "'Postcondition '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "Word", "Number", "Punctuation", 
			"EOL", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "UsecaseReader.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public UsecaseReaderParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class UsecaseListContext extends ParserRuleContext {
		public List<UsecaseContext> usecase() {
			return getRuleContexts(UsecaseContext.class);
		}
		public UsecaseContext usecase(int i) {
			return getRuleContext(UsecaseContext.class,i);
		}
		public List<TerminalNode> EOL() { return getTokens(UsecaseReaderParser.EOL); }
		public TerminalNode EOL(int i) {
			return getToken(UsecaseReaderParser.EOL, i);
		}
		public UsecaseListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_usecaseList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UsecaseReaderListener ) ((UsecaseReaderListener)listener).enterUsecaseList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UsecaseReaderListener ) ((UsecaseReaderListener)listener).exitUsecaseList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UsecaseReaderVisitor ) return ((UsecaseReaderVisitor<? extends T>)visitor).visitUsecaseList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UsecaseListContext usecaseList() throws RecognitionException {
		UsecaseListContext _localctx = new UsecaseListContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_usecaseList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(40);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0:
					{
					setState(38);
					usecase();
					}
					break;
				case EOL:
					{
					setState(39);
					match(EOL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(42); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__0 || _la==EOL );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UsecaseContext extends ParserRuleContext {
		public UcNameContext ucName() {
			return getRuleContext(UcNameContext.class,0);
		}
		public List<TerminalNode> EOL() { return getTokens(UsecaseReaderParser.EOL); }
		public TerminalNode EOL(int i) {
			return getToken(UsecaseReaderParser.EOL, i);
		}
		public List<FlowContext> flow() {
			return getRuleContexts(FlowContext.class);
		}
		public FlowContext flow(int i) {
			return getRuleContext(FlowContext.class,i);
		}
		public List<BriefDescContext> briefDesc() {
			return getRuleContexts(BriefDescContext.class);
		}
		public BriefDescContext briefDesc(int i) {
			return getRuleContext(BriefDescContext.class,i);
		}
		public List<PreconditionContext> precondition() {
			return getRuleContexts(PreconditionContext.class);
		}
		public PreconditionContext precondition(int i) {
			return getRuleContext(PreconditionContext.class,i);
		}
		public List<ActorContext> actor() {
			return getRuleContexts(ActorContext.class);
		}
		public ActorContext actor(int i) {
			return getRuleContext(ActorContext.class,i);
		}
		public List<DependencyContext> dependency() {
			return getRuleContexts(DependencyContext.class);
		}
		public DependencyContext dependency(int i) {
			return getRuleContext(DependencyContext.class,i);
		}
		public List<GeneralizationContext> generalization() {
			return getRuleContexts(GeneralizationContext.class);
		}
		public GeneralizationContext generalization(int i) {
			return getRuleContext(GeneralizationContext.class,i);
		}
		public UsecaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_usecase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UsecaseReaderListener ) ((UsecaseReaderListener)listener).enterUsecase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UsecaseReaderListener ) ((UsecaseReaderListener)listener).exitUsecase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UsecaseReaderVisitor ) return ((UsecaseReaderVisitor<? extends T>)visitor).visitUsecase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UsecaseContext usecase() throws RecognitionException {
		UsecaseContext _localctx = new UsecaseContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_usecase);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			ucName();
			setState(45);
			match(EOL);
			setState(56); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(56);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__11:
				case T__12:
				case T__13:
				case T__14:
					{
					setState(46);
					flow();
					}
					break;
				case T__1:
				case T__2:
				case T__5:
				case T__6:
				case T__7:
				case T__8:
					{
					setState(52);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case T__1:
						{
						setState(47);
						briefDesc();
						}
						break;
					case T__2:
						{
						setState(48);
						precondition();
						}
						break;
					case T__5:
					case T__6:
						{
						setState(49);
						actor();
						}
						break;
					case T__7:
						{
						setState(50);
						dependency();
						}
						break;
					case T__8:
						{
						setState(51);
						generalization();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(54);
					match(EOL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(58); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UcNameContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public UcNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ucName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UsecaseReaderListener ) ((UsecaseReaderListener)listener).enterUcName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UsecaseReaderListener ) ((UsecaseReaderListener)listener).exitUcName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UsecaseReaderVisitor ) return ((UsecaseReaderVisitor<? extends T>)visitor).visitUcName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UcNameContext ucName() throws RecognitionException {
		UcNameContext _localctx = new UcNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ucName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(T__0);
			setState(61);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BriefDescContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public BriefDescContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_briefDesc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UsecaseReaderListener ) ((UsecaseReaderListener)listener).enterBriefDesc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UsecaseReaderListener ) ((UsecaseReaderListener)listener).exitBriefDesc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UsecaseReaderVisitor ) return ((UsecaseReaderVisitor<? extends T>)visitor).visitBriefDesc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BriefDescContext briefDesc() throws RecognitionException {
		BriefDescContext _localctx = new BriefDescContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_briefDesc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(T__1);
			setState(64);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PreconditionContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public PreconditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_precondition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UsecaseReaderListener ) ((UsecaseReaderListener)listener).enterPrecondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UsecaseReaderListener ) ((UsecaseReaderListener)listener).exitPrecondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UsecaseReaderVisitor ) return ((UsecaseReaderVisitor<? extends T>)visitor).visitPrecondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PreconditionContext precondition() throws RecognitionException {
		PreconditionContext _localctx = new PreconditionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_precondition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(T__2);
			setState(67);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActorContext extends ParserRuleContext {
		public ActorTypeContext actorType() {
			return getRuleContext(ActorTypeContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(UsecaseReaderParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(UsecaseReaderParser.WS, i);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public ActorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UsecaseReaderListener ) ((UsecaseReaderListener)listener).enterActor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UsecaseReaderListener ) ((UsecaseReaderListener)listener).exitActor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UsecaseReaderVisitor ) return ((UsecaseReaderVisitor<? extends T>)visitor).visitActor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActorContext actor() throws RecognitionException {
		ActorContext _localctx = new ActorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_actor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			actorType();
			setState(70);
			match(WS);
			setState(71);
			_la = _input.LA(1);
			if ( !(_la==T__3 || _la==T__4) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(72);
			match(WS);
			setState(73);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActorTypeContext extends ParserRuleContext {
		public ActorTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actorType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UsecaseReaderListener ) ((UsecaseReaderListener)listener).enterActorType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UsecaseReaderListener ) ((UsecaseReaderListener)listener).exitActorType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UsecaseReaderVisitor ) return ((UsecaseReaderVisitor<? extends T>)visitor).visitActorType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActorTypeContext actorType() throws RecognitionException {
		ActorTypeContext _localctx = new ActorTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_actorType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			_la = _input.LA(1);
			if ( !(_la==T__5 || _la==T__6) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DependencyContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public SpecialKeywordContext specialKeyword() {
			return getRuleContext(SpecialKeywordContext.class,0);
		}
		public DependencyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dependency; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UsecaseReaderListener ) ((UsecaseReaderListener)listener).enterDependency(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UsecaseReaderListener ) ((UsecaseReaderListener)listener).exitDependency(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UsecaseReaderVisitor ) return ((UsecaseReaderVisitor<? extends T>)visitor).visitDependency(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DependencyContext dependency() throws RecognitionException {
		DependencyContext _localctx = new DependencyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_dependency);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(T__7);
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20))) != 0)) {
				{
				setState(78);
				specialKeyword();
				}
			}

			setState(81);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GeneralizationContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public SpecialKeywordContext specialKeyword() {
			return getRuleContext(SpecialKeywordContext.class,0);
		}
		public GeneralizationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_generalization; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UsecaseReaderListener ) ((UsecaseReaderListener)listener).enterGeneralization(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UsecaseReaderListener ) ((UsecaseReaderListener)listener).exitGeneralization(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UsecaseReaderVisitor ) return ((UsecaseReaderVisitor<? extends T>)visitor).visitGeneralization(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GeneralizationContext generalization() throws RecognitionException {
		GeneralizationContext _localctx = new GeneralizationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_generalization);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(T__8);
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20))) != 0)) {
				{
				setState(84);
				specialKeyword();
				}
			}

			setState(87);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FlowContext extends ParserRuleContext {
		public StepsContext steps() {
			return getRuleContext(StepsContext.class,0);
		}
		public PostConditionContext postCondition() {
			return getRuleContext(PostConditionContext.class,0);
		}
		public FlowTypeContext flowType() {
			return getRuleContext(FlowTypeContext.class,0);
		}
		public TerminalNode WS() { return getToken(UsecaseReaderParser.WS, 0); }
		public TerminalNode EOL() { return getToken(UsecaseReaderParser.EOL, 0); }
		public RfsContext rfs() {
			return getRuleContext(RfsContext.class,0);
		}
		public FlowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_flow; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UsecaseReaderListener ) ((UsecaseReaderListener)listener).enterFlow(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UsecaseReaderListener ) ((UsecaseReaderListener)listener).exitFlow(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UsecaseReaderVisitor ) return ((UsecaseReaderVisitor<? extends T>)visitor).visitFlow(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FlowContext flow() throws RecognitionException {
		FlowContext _localctx = new FlowContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_flow);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(89);
			flowType();
			setState(90);
			match(WS);
			setState(91);
			_la = _input.LA(1);
			if ( !(_la==T__9 || _la==T__10) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(92);
			match(EOL);
			}
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__15) {
				{
				setState(94);
				rfs();
				}
			}

			setState(97);
			steps();
			setState(98);
			postCondition();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FlowTypeContext extends ParserRuleContext {
		public FlowTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_flowType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UsecaseReaderListener ) ((UsecaseReaderListener)listener).enterFlowType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UsecaseReaderListener ) ((UsecaseReaderListener)listener).exitFlowType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UsecaseReaderVisitor ) return ((UsecaseReaderVisitor<? extends T>)visitor).visitFlowType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FlowTypeContext flowType() throws RecognitionException {
		FlowTypeContext _localctx = new FlowTypeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_flowType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RfsContext extends ParserRuleContext {
		public FlowTypeContext flowType() {
			return getRuleContext(FlowTypeContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(UsecaseReaderParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(UsecaseReaderParser.WS, i);
		}
		public List<TerminalNode> Number() { return getTokens(UsecaseReaderParser.Number); }
		public TerminalNode Number(int i) {
			return getToken(UsecaseReaderParser.Number, i);
		}
		public TerminalNode EOL() { return getToken(UsecaseReaderParser.EOL, 0); }
		public RfsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rfs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UsecaseReaderListener ) ((UsecaseReaderListener)listener).enterRfs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UsecaseReaderListener ) ((UsecaseReaderListener)listener).exitRfs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UsecaseReaderVisitor ) return ((UsecaseReaderVisitor<? extends T>)visitor).visitRfs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RfsContext rfs() throws RecognitionException {
		RfsContext _localctx = new RfsContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_rfs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(T__15);
			setState(103);
			flowType();
			setState(104);
			match(WS);
			setState(105);
			_la = _input.LA(1);
			if ( !(_la==T__9 || _la==T__10) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(106);
			match(WS);
			setState(107);
			match(Number);
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(108);
				match(T__16);
				setState(109);
				match(Number);
				}
			}

			setState(112);
			match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StepsContext extends ParserRuleContext {
		public List<StepContext> step() {
			return getRuleContexts(StepContext.class);
		}
		public StepContext step(int i) {
			return getRuleContext(StepContext.class,i);
		}
		public List<ConditionalLogicContext> conditionalLogic() {
			return getRuleContexts(ConditionalLogicContext.class);
		}
		public ConditionalLogicContext conditionalLogic(int i) {
			return getRuleContext(ConditionalLogicContext.class,i);
		}
		public StepsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_steps; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UsecaseReaderListener ) ((UsecaseReaderListener)listener).enterSteps(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UsecaseReaderListener ) ((UsecaseReaderListener)listener).exitSteps(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UsecaseReaderVisitor ) return ((UsecaseReaderVisitor<? extends T>)visitor).visitSteps(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StepsContext steps() throws RecognitionException {
		StepsContext _localctx = new StepsContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_steps);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(116);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Number:
					{
					setState(114);
					step();
					}
					break;
				case T__21:
				case T__22:
				case T__23:
				case T__24:
				case T__25:
				case T__26:
					{
					setState(115);
					conditionalLogic();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(118); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << Number))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
